changed to using javafx instead of swing